--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <audio src="https://feeldreams.github.io/djikhlas.mp3" id="linkmp3" class="sembunyi"></audio>
 
   <div id="bodyblur">
-    <!-- Wallpaper --><img src="https://feeldreams.github.io/wp9.jpg" id="wallpaper" />
+    <!-- Wallpaper --><img src="https://github.com/Aghniya23/HBD-lail/blob/main/IMG-20220910-WA0106.jpg" id="wallpaper" />
     <div id="beneranblur"></div>
   </div>
 
